# trip-assistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: hooks.json  settings.json
.claude/hooks/: pre-push-review.sh
.claude/skills/review-python/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.github/: README.md
.github/workflows/: agent-ci.yml  api-ci.yml  architecture-diagram.yml  deploy.yml  frontend-ci.yml  frontend-deploy.yml  infra-ci.yml
agent/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TASKS.md  handler.py  pyproject.toml  sam.sh  samconfig.toml  template.yaml
agent/.claude/: settings.local.json
agent/.claude/skills/: SKILL.md
agent/.claude/skills/references/: logger-usage.md  node-patterns.md  testing-patterns.md
agent/.claude/skills/review-langgraph/: SKILL.md
agent/.claude/skills/review-langgraph/references/: checklist.md  langgraph-docs.md  refactoring-patterns.md
agent/.claude/skills/scripts/: test_node.py
agent/data/: annecy_geneva.txt  aosta_valley.txt  car_rental.txt  chamonix.txt  flight.txt  routes_to_aosta.txt
agent/sam-app/: README.md  template.yaml
agent/src/: documents.py  graph.py  logger.py  prompts.py  schemas.py  state.py
agent/src/nodes/: __init__.py  annecy_geneva.py  aosta.py  car_rental.py  chamonix.py  classifier.py  flight.py  general.py  language_guard.py  routes.py  specialist_factory.py
agent/tests/: conftest.py  test_documents.py  test_error_handling.py  test_graph.py  test_handler.py  test_language_guard.py  test_placeholder.py  test_prompts.py  test_state.py  test_stream_agent.py
agent/tests/events/: first_question.json  question_with_history.json
agent/tests/integration/: __init__.py  conftest.py  test_classifier_integration.py  test_graph_integration.py
agent/tests/nodes/: conftest.py  test_classifier.py  test_specialists.py
api/: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TASKS.md  openapi.json  pyproject.toml  requirements.txt  sam.sh  samconfig.toml  template.yaml
api/.claude/: settings.local.json
api/.claude/skills/: SKILL.md
api/.claude/skills/review-fastapi/: SKILL.md
api/.claude/skills/review-fastapi/references/: checklist.md
api/.claude/skills/trip-api/: SKILL.md
api/.claude/skills/trip-api/references/: api-patterns.md  testing-patterns.md
api/app/: __init__.py  cache.py  dependencies.py  feedback.py  handler.py  logger.py  main.py  middleware.py  settings.py
api/app/db/: cache.py  feedback.py  messages.py
api/app/routers/: __init__.py  feedback.py  health.py  messages.py  schemas.py  stream.py
api/tests/: __init__.py  conftest.py  helpers.py  test_cache.py  test_cache_endpoint.py  test_cache_storage.py  test_dependencies.py  test_dependencies_lambda.py  test_feedback.py  test_feedback_endpoint.py  test_handler.py  test_main.py  test_messages_storage.py  test_schemas.py  test_settings.py  test_stream_router.py
api/tests/events/: health-get.json  messages-post.json
api/tests/integration/: __init__.py  conftest.py  test_api_integration.py
badges/: agent-coverage.json  api-coverage.json  frontend-coverage.json
docs/: architecture.md  data-model.md
frontend/: .dockerignore  .env.example  CLAUDE.md  README.md  TASKS.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.integration.config.ts
frontend/.claude/: settings.local.json
frontend/src/: App.test.tsx  App.tsx  main.tsx  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/auth/: AuthContext.test.tsx  AuthContext.tsx  config.ts  types.ts
infra/: .gitignore  .terraform.lock.hcl  CLAUDE.md  README.md  TASKS.md  agent-response.json  main.tf  outputs.tf  variables.tf
infra/bootstrap/: main.tf  outputs.tf  variables.tf
infra/scripts/: create-smoke-test-user.sh
(+70 files in other folders)
