[project]
name = "trip-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
